--- a/package.json
+++ b/package.json
@@ -4,27 +4,68 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
-    "lint": "eslint pages/**/*.js src/**/*.js"
+    "clean": "rimraf dist",
+    "build:webpack": "NODE_ENV=production node -r dotenv/config node_modules/.bin/webpack --config webpack.config.prod.js -p",
+    "build": "npm run clean && npm run build:webpack",
+    "start-dev": "node -r dotenv/config devServer.js",
+    "start-debug-production": "API_CONNECTION=https://beaprogrammer.org/api node -r dotenv/config devServer.js",
+    "start-server": "node -r dotenv/config server.js",
+    "start": "npm run build && npm run start-server",
+    "lint": "eslint src",
+    "pretty": "prettier --write 'src/**/*.js'",
+    "flow": "flow",
+    "flowtyped": "flow-typed",
+    "test": "npm run lint && npm run flow && npm run jest",
+    "jest": "jest",
+    "precommit": "lint-staged"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@neutrinojs/react": "^8.1.1",
+    "@neutrinojs/style-loader": "^8.1.1",
     "babel-eslint": "^8.2.1",
+    "css-loader": "^0.28.9",
+    "dotenv": "^5.0.0",
     "erschema": "^1.1.3",
+    "eventsource-polyfill": "^0.9.6",
+    "flexbox-grid": "^1.0.0",
+    "flow-bin": "^0.65.0",
+    "formik": "^0.11.7",
+    "handlebars": "^4.0.11",
     "husky": "^0.14.3",
     "immutable": "^3.8.2",
     "lint-staged": "^6.1.0",
+    "material-design-icons": "^3.0.1",
+    "neutrino": "^8.1.1",
+    "neutrino-middleware-postcss": "^3.0.0",
     "next": "^5.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-each": "^0.10.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.1.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-modules": "^1.1.0",
+    "postcss-simple-vars": "^4.1.0",
     "prettier": "^1.10.2",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
+    "redux-batched-actions": "^0.2.1",
+    "redux-compose-hors": "^1.0.0",
     "redux-noredux": "^1.0.2",
+    "redux-retype-actions": "^1.0.5",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "thunk": "^0.0.1"
+    "style-loader": "^0.20.1",
+    "thunk": "^0.0.1",
+    "webpack-material-design-icons": "^0.1.0",
+    "yup": "^0.24.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
