--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "flowtyped": "flow-typed",
     "test": "npm run lint && npm run flow && npm run jest",
     "jest": "jest",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "yo": "yo"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@neutrinojs/react": "^8.1.1",
     "@neutrinojs/style-loader": "^8.1.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.9",
     "dotenv": "^5.0.0",
     "erschema": "^1.1.3",
@@ -35,11 +39,15 @@
     "handlebars": "^4.0.11",
     "husky": "^0.14.3",
     "immutable": "^3.8.2",
+    "jest": "19.*.*",
+    "jwt-decode": "^2.2.0",
+    "khange": "^1.0.2",
     "lint-staged": "^6.1.0",
     "material-design-icons": "^3.0.1",
     "neutrino": "^8.1.1",
     "neutrino-middleware-postcss": "^3.0.0",
     "next": "^5.0.0",
+    "noredux": "^1.0.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-each": "^0.10.0",
     "postcss-import": "^11.0.0",
@@ -61,26 +69,49 @@
     "redux-noredux": "^1.0.2",
     "redux-retype-actions": "^1.0.5",
     "redux-thunk": "^2.2.0",
+    "regenerator-runtime": "^0.11.1",
     "reselect": "^3.0.1",
     "style-loader": "^0.20.1",
     "thunk": "^0.0.1",
+    "uuid": "^3.2.1",
     "webpack-material-design-icons": "^0.1.0",
+    "yo": "^2.0.1",
     "yup": "^0.24.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-jest": "19.*.*",
     "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-jest": "^21.8.0",
     "eslint-plugin-react": "^7.6.1",
-    "flowtype": "^2.0.0"
+    "flowtype": "^2.0.0",
+    "jest-localstorage-mock": "^2.2.0",
+    "jsonwebtoken": "^8.1.1"
   },
   "lint-staged": {
     "{src,pages}/**/*.{js,json,css}": [
       "prettier --write '**/*.js'",
       "git add"
+    ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^.*[.](pcss|css|sass|less)$": "<rootDir>/src/tests/EmptyModule"
+    },
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/src/tests/"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "setupFiles": [
+      "jest-localstorage-mock"
     ]
   }
 }
