--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "thunk": "^0.0.1",
     "uuid": "^3.2.1",
     "webpack-material-design-icons": "^0.1.0",
+    "webpack-stats-plugin": "^0.2.1",
     "yo": "^2.0.1",
     "yup": "^0.24.0"
   },
